Hover fixes
- Fixed the RB/Ring/Sites one-click filters not showing properly in the deckbuilder
- Altered the way that card borders are created so that hover-over still works when hovering on the border of a card
- Adjusted Helpless errata so it can't be abused repeatedly by Enduring Nazgul

--- a/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/game.css
+++ b/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/game.css
@@ -479,6 +479,10 @@ ul.ui-tabs-nav {
     filter: grayscale(0.7) contrast(0.5) brightness(0.6);
 }
 
+.card.inactive .borderOverlay {
+    border: solid #333;
+}
+
 .card.inactive tokenOverlay {
     color: #777777;
 }
